[gd_scene load_steps=11 format=3 uid="uid://vrso6qncj1nm"]

[ext_resource type="Script" path="res://addons/netfox/rollback/rollback-synchronizer.gd" id="1_g0p7o"]
[ext_resource type="Script" path="res://scenes/player/Player.gd" id="1_mk8qw"]
[ext_resource type="Script" path="res://addons/netfox/tick-interpolator.gd" id="2_3rc26"]
[ext_resource type="Script" path="res://scenes/player/PlayerWeapon.gd" id="3_4j0gy"]
[ext_resource type="Script" path="res://scenes/player/PlayerInput.gd" id="10_50d5g"]

[sub_resource type="BoxMesh" id="BoxMesh_qmeb2"]
size = Vector3(0.4, 0.25, 0.5)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6kydi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2gc5u"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xnks4"]
material = SubResource("StandardMaterial3D_2gc5u")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_70css"]
properties/0/path = NodePath(".:health")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:death_tick")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:respawn_position")
properties/2/spawn = true
properties/2/replication_mode = 2

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_mk8qw")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.705698, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Nose" type="MeshInstance3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)
mesh = SubResource("BoxMesh_qmeb2")

[node name="PlayerFPSWeapon" type="Node3D" parent="Head"]
script = ExtResource("3_4j0gy")
fire_cooldown = null
max_distance = null
collision_mask = null
exclude = null

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Head/PlayerFPSWeapon"]

[node name="DisplayNameLabel3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30427, 0)
pixel_size = 0.002
billboard = 1
fixed_size = true
font_size = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_6kydi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_xnks4")

[node name="RollbackSynchronizer" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("1_g0p7o")
root = NodePath("..")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_70css")

[node name="TickInterpolator" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("2_3rc26")
root = NodePath("..")

[node name="Input" type="Node" parent="."]
script = ExtResource("10_50d5g")
